src/public/kit/styles.css
/* ... */
.round-path > a {
	margin: 0 4px;
}
.round-view {
	display: table;
	margin: 8px auto;
}
.round-view > :first-child {
	margin-bottom: -1px;
	-webkit-border-radius: 4px 4px 0 0;
	-moz-border-radius: 4px 4px 0 0;
	border-radius: 4px 4px 0 0;
}
.round-view > div {
	display: flex;
}
.round-view > div > div {
	display: flex;
	padding: 0;
	margin: 0;
	flex-grow: 1;
	-webkit-flex-direction: column;
	flex-direction: column;
}
.round-view > div > div:not(:first-child) {
	margin-left: -1px;
}
.round-view > div > div > a, .round-view > :first-child {
	display: block;
	min-width: 100px;
	padding: 5px;
	text-align: center;
	border: 1px solid #a2a2a2;
	border-top: 0px;
	white-space: nowrap;
}
.round-view > div > div > a:first-child, .round-view > :first-child {
	border: 1px solid #a2a2a2;
	border-bottom: 2px solid #a2a2a2;
	padding: 7px;
	font-weight: bold;
	line-height: 12px;
}
.round-view > div > div > a:first-child > div {
	margin: 5px;
	display: block;
	text-align: left;
	color: #000;
	font-size: 12px;
	font-weight: normal;
}
.round-view > div > div > a:first-child > div:first-child {
	margin-top: 10px;
}
.round-view > div > div > a:first-child > div > label {
	display: inline-block;
	padding-right: 8px;
	min-width: 40px;
	color: #444;
}
.round-view > div > div > a:hover,
.round-view > div > div > a:focus,
.round-view > a:first-child:hover,
.round-view > a:first-child:focus {
	text-decoration: none;
	background: #eee;
}
.round-view > div > div > a.status.green:hover,
.round-view > div > div > a.status.green:focus {
	background: #d7f9d7;
}
.round-view > div > div > a.status.red:hover,
.round-view > div > div > a.status.red:focus {
	background: #fad6d6;
}
.round-view > div > div > a.status.intense-red:hover,
.round-view > div > div > a.status.intense-red:focus {
	background: #f3c9b4;
}
.round-view > div > div > a.status.yellow:hover,
.round-view > div > div > a.status.yellow:focus {
	background: #fbdda2;
}

/* Ranking */
.ranking {
	margin: 8px 10px 8px 0;
}
.ranking > tbody td {
	text-align: right;
}
.ranking > thead th {
	text-align: center;
}
.ranking > tbody > tr > td:nth-child(2) {
	text-align: left;
}
.ranking > thead > tr:nth-child(2) > th:first-child {
	border-left: 1px solid #a2a2a2;
}

/* Submission */
.submission-info {
	display: block;
	width: 85%;
	margin: 5px 8px;
}
.submission-info > div:first-child {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
}
.submission-info > div:first-child h1 {
	white-space: nowrap;
}
.submission-info > div:first-child h1 + div {
	margin: 8px 0;
}
/*.submission-info h2 {
	margin: 0;
	font-size: 30px;
	font-weight: normal;
	line-height: 23px;
}*/
.submission-info table {
	margin-top: 30px;
}
.submission-info table td {
	padding: 10px 16px;
	text-align: center;
}
div.right-flow {
	display: flex;
	flex-flow: row wrap;
	justify-content: flex-end;
}
.compilation-errors, .simfile {
	display: inline-block;
	align-self: flex-start;
	padding: 8px;
	margin: 8px 0 0;
	font-family: "Ubuntu Mono",Monaco,Menlo,Consolas,"Courier New",monospace;
	background: #f5f5f5;
	border: 1px solid #afafaf;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.results {
	margin-left: 10px;
}
.results > h2 {
	font-size: 20px;
	font-weight: normal;
}
.results > table {
	margin-left: 0;
}
.results > table th.test {
	min-width: 80px;
}
.results > table th.result {
	min-width: 190px;
}
.results > table th.time {
	min-width: 95px;
}
.results > table th.memory {
	min-width: 110px;
}
.results > table th.points {
	min-width: 70px;
}
.results > table th {
	padding: 6px;
	line-height: 20px;
	white-space: nowrap;
}
.results > table td {
	padding: 4px 20px 4px 8px;
	line-height: 20px;
	white-space: nowrap;
}
.results > table td:nth-child(3),
.results > table td:nth-child(4) {
	text-align: right;
}
.results > table td.groupscore {
	padding-right: 8px;
	text-align: right;
	vertical-align: middle;
}
.status.green {
	background: #aef4ae;
}
.status.red {
	background: #ffbaba;
}
.status.intense-red {
	background: #f4ae8b;
}
.status.yellow {
	background: #ffd27b;
}
.status.blue {
	background: #7abfff;
}
.status.purple {
	background: #d3a4ff;
}
.tests-comments ul, .tests-comments li {
	padding: 0;
	margin: 0;
	color: #999999;
	list-style: none;
}
.tests-comments {
	padding: 0;
	margin: 20px 0;
	line-height: 20px;
	text-align: left;
}
.tests-comments .test-id {
	padding-right: 5px;
	font-size: 85%;
	vertical-align: super;
}

/* Source code view */
table.code-view {
	display: table;
	margin: 8px 2px;
	line-height: 21px;
	font-family: "Ubuntu Mono",Monaco,Menlo,Consolas,"Courier New",monospace;
	font-size: 16px;
	background: #f5f5f5;
	border: 1px solid #afafaf;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	white-space: pre;
	-moz-tab-size: 4;
	tab-size: 4;
}
table.code-view > tbody > tr > td:first-child {
	border-right: 1px solid #afafaf;
	padding: 0 8px 0 10px;
	margin-right: 10px;
	color: #3c3c3c;
	text-align: right;
}
table.code-view > tbody > tr > td:first-child::before {
	content: attr(line);
}
table.code-view > tbody > tr > td:last-child {
	padding: 0 10px;
}
table.code-view > tbody > tr:first-child td {
	padding-top: 2px;
}
table.code-view > tbody > tr:last-child td {
	padding-bottom: 2px;
}

/* Submissions */
table.submissions {
	display: inline-table;
	margin: 0;
}
table.submissions th {
	padding: 6px;
	line-height: 20px;
}
table.submissions th.username {
	min-width: 60px;
}
table.submissions th.full-name {
	min-width: 60px;
}
table.submissions th.time {
	min-width: 100px;
}
table.submissions th.problem {
	min-width: 135px;
}
table.submissions th.status {
	min-width: 190px;
}
table.submissions th.score {
	min-width: 60px;
}
table.submissions th.type {
	min-width: 60px;
}
table.submissions td:nth-child(2) > a, /* Normal (and) user submission */
table.submissions td:nth-child(4) > a { /* Round submissions (admin view) */
	white-space: nowrap;
}
/* ... */

